<resources>

     <string name="app_name">Finan</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="confirmarsenha">Confirmar senha</string>
    <string name="titulo_principal">ADD GASTO</string>
    <string name="valor">Valor</string>
    <string name="descricao">Descrição</string>
    <string name="email_parceiro">Email parceiro</string>
    <string name="saldo">SALDO</string>
    <string name="total_entrada">ENTRADA</string>
    <string name="total_saida">SAÍDA</string>
    <string name="alimentacao">ALIMENTAÇÃO</string>
    <string name="lazer">LAZER</string>
    <string name="saude">SAÚDE</string>
    <string name="domestico">DOMÉSTICO</string>
    <string name="cartao_credito">CARTÃO DE CRÉDITO</string>
    <string name="vestuario">VESTUARIO</string>
    <string name="transporte">TRANSPORTE</string>
    <string name="moradia">MORADIA</string>
    <string name="outros">OUTROS</string>
    <string name="sem_conexao">Sem conexão de internet</string>
    <string name="wifi_conn">Wifi conectada</string>
    <string name="mobile_conn">Rede móvel conectada</string>
    <string name="envio_lanc">Enviando lançamentos armazenados</string>
    <string name="in">ENTRADA</string>
    <string name="janeiro">Janeiro</string>
    <string name="fevereiro">Fevereiro</string>
    <string name="marco">Março</string>
    <string name="abril">Abril</string>
    <string name="maio">Maio</string>
    <string name="junho">Junho</string>
    <string name="julho">Julho</string>
    <string name="agosto">Agosto</string>
    <string name="setembro">Setembro</string>
    <string name="outubro">Outubro</string>
    <string name="novembro">Novembro</string>
    <string name="dezembro">Dezembro</string>
    <string name="meses">Meses</string>    
    <string name="add_lanc">Add lançamento</string>
    <string name="continuar_add">Continuar adicionando?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="add_parc">Add parceiro</string>
    <string name="adding">Adicionando</string>
    <string name="parc_add">Adicionado com sucesso!</string>
    <string name="deletado">Deletado com sucesso!</string>
    <string name="editado">Editado</string>
    <string name="carregando">Carregando</string>
    <string name="delete">Deletando</string>
    <string name="post_add">Lançamento adicionado, será enviado quando uma conexão com a internet estiver disponível</string>
    <string name="confirmar_delete">Deseja realmente deletar?</string>
    <string name="del">Excluir</string>
    <string name="cancelar">Cancelar</string>
    <string name="relatorio">Relatório</string>
    <string name="entrada">Entrada</string>
    <string name="saida">Saída</string>
    <string name="cartao_cred">Cartão</string>
    <string name="salvar_dados">Salvar dados</string>
    <string name="tipos">Filtro</string>
    <string name="dinheiro">Preço R$ </string>
    
    <string name="action_add_user">Add Usuário</string>
    <string name="action_rel">Relatórios</string>
    <string name="action_atualizar">Atualizar</string>
    <string name="action_sair">Sair</string>
    <string name="action_add_lanc">Add lançamento</string>
    
    <string name="erro">Erro</string>
    <string name="erro_campos">Necessário completar todos os campos</string>
    <string name="erro_tipo_lanc">Você deve selecionar o tipo de lançamento</string>    
    <string name="erro_senhas">Senhas devem ser iguais</string>
    <string name="erro_conectar">Connection error</string>
    <string name="erro_movi">No transactions</string>

    <string-array
        name="array_tipos">
        <item>Alimentação</item>
        <item>Lazer</item>
        <item>Saúde</item>
        <item>Doméstico</item>        
        <item>Vestuario</item>
        <item>Transporte</item>
        <item>Moradia</item>
        <item>Outros</item>
        <item>Entrada</item>        
    </string-array>
    
    <plurals name="countdown_seconds">
        <item quantity="one">Dismissing in 1...</item>
        <item quantity="other">Dismissing in %d...</item>
    </plurals>
    
    <string name="countdown_dismissing">Dismissing</string>
    
</resources>
