<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:layout_marginTop="50dp"
      android:id="@+id/linear"
      android:background="@drawable/background_button_default_click"
      android:layout_alignParentTop="true"
      android:orientation="vertical"
      >
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/black"
        android:singleLine="true"
        />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etPass"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:singleLine="true"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical"
        >
    <Button
        android:id="@+id/btnConnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPass"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@drawable/selector_primary"
        android:text="LOG IN"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPass"
        android:textColor="@color/black"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@drawable/selector_default"
        android:text="SIGN UP"
        />
    </LinearLayout>
  </LinearLayout>
  <Button
      android:id="@+id/btnSaveData"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/linear"
      android:paddingLeft="20dp"
      android:paddingRight="20dp"
      android:paddingTop="20dp"
      android:paddingBottom="20dp"
      android:layout_marginTop="45dp"
      android:layout_marginLeft="25dp"
      android:layout_marginRight="25dp"
      android:background="@drawable/selector_transparent"
      android:text="@string/salvar_dados"
      android:textColor="@color/grey"
      />


</RelativeLayout>